# systems-microbench-lab

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: cache_stride.cpp
lessons/: 00-benchmarking-fundamentals-and-mvp.md  00-project-roadmap.md  01-cpp-crash-course.md  01-repo-layout-and-cmake.md  02-cli-results-and-harness.md  02-cmake-crash-course.md  03-cache-stride-scaffold-guide.md  03-measurement-methodology.md  04-cache-stride.md  05-false-sharing.md  06-atomic-counter.md  07-thread-scaling.md  08-full-benchmark-set.md  09-results-plots-and-writeups.md  10-polish-and-stretch-goals.md  README.md
scripts/: build.sh  run_all.sh  run_perf.sh
